screen update, color picker

--- a/Scoreboard/Scoreboard.csproj
+++ b/Scoreboard/Scoreboard.csproj
@@ -8,4 +8,8 @@
     <StartupObject>Scoreboard.App</StartupObject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PixiEditor.ColorPicker" Version="3.3.1" />
+  </ItemGroup>
+
 </Project>
